@@ -89,9 +89,6 @@ configuration_dict = {\n
         "business_configuration_id": "STANDARD_CONFIGURATOR_TEST",\n
         \'bt_repository_list\':[\'http://www.erp5.org/dists/snapshot/bt5/\'],\n
 \n
-        # More configurations\n
-        "oood_hostname": "localhost",\n
-        "oood_port": 8008,\n
         }\n
 \n
 return configuration_dict\n
